src/style.css
@font-face {
  font-family: Avenir;
  src: url(fonts/Avenir-Book.ttf);
  font-weight: 300;
}

@font-face {
  font-family: Avenir;
  src: url(fonts/Avenir-Heavy.ttf);
  font-weight: 800;
}

.body {
  margin: 0;
}

.search-bar {
  position: relative;
  display: flex;
  align-items: center;
  border: 1px solid #e1e7ed;
  border-radius: 4px;
  box-sizing: border-box;
  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
  margin-inline: 8px;
}

.search-bar:hover {
  box-shadow: 0 4px 4px rgba(61, 78, 97, 0.25);
}

.search-bar--big {
  gap: 17px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.search-bar--small {
  gap: 9px;
}

.search-bar__input {
  font-family: Avenir, sans-serif;
  font-weight: 300;
  color: #3d4e61;
  border-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.search-bar__input:focus {
  font-weight: 800;
  outline: none;
}

.search-bar__input::placeholder {
  font-family: Avenir, sans-serif;
  font-weight: 300;
  color: #3d4e61;
}

.search-bar__input--big {
  font-size: 16px;
  height: 70px;
  padding-left: 62px;
}

.search-bar__input--small {
  font-size: 14px;
  height: 42px;
  padding-left: 33px;
}

.search-bar__icon {
  position: absolute;
  object-fit: contain;
}

.search-bar__icon--big {
  width: 19px;
  left: 25px;
}

.search-bar__icon--small {
  width: 11px;
  left: 12px;
}

